@@ -1,8 +1,0 @@
-#pragma once
-
-#include "ofThread.h"
-
-#warning ofxThread has been deprecated. 
-#warning Remove all references to ofxThread.h and use ofThread instead.
-typedef ofThread ofxThread;
-
