@@ -1,8 +1,0 @@
-#pragma once
-
-#include "ofQuaternion.h"
-
-#warning ofxQuaternion has been deprecated. 
-#warning Remove all references to ofxQuaternion.h and use ofQuaternion instead.
-
-typedef ofQuaternion ofxQuaternion;
