@@ -1,8 +1,0 @@
-#pragma once
-
-#include "ofVec3f.h"
-
-#warning ofxVec3f has been deprecated. 
-#warning Remove all references to ofxVec3f.h and use ofVec3f instead.
-
-typedef ofVec3f ofxVec3f;
